ボタン機能追加

--- a/test/header.html
+++ b/test/header.html
@@ -2,18 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>ikuseiGame</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
       <div class="header-logo">育成ゲーム</div>
-      <div class="header-list">
-        <ul>
-          <li>ログイン</li>
-          <li>新規会員登録</li>
-          <li>ルール説明</li>
-        </ul>
+      <div class="header-right">
+        <a href="#">ログイン</a>
+        <a href="#">新規会員登録</a>
+        <a href="#">ルール説明</a> 
       </div>
     </div>
 
