--- a/test/header.html
+++ b/test/header.html
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="header-logo">育成ゲーム</div>
       <div class="header-right">
-        <a href="#">ログイン</a>
+        <a href="login.html">ログイン</a>
         <a href="#">新規会員登録</a>
         <a href="#">ルール説明</a> 
       </div>
