"アカウント作成機能"追加

--- a/test/newMember.html
+++ b/test/newMember.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <header>
-      <h1>ログインページ</h1>
+      <h1>アカウント作成</h1>
     </header>
     
     <div class="login-form">
-        <p>ユーザネーム（必須）</p>
+        <p>登録ユーザネーム（必須）</p>
         <input>
-        <p>パスワード（必須）</p>
+        <p>登録パスワード（必須）</p>
         <input>
-        <input class="login-submit" type="submit" value="ログイン">
+        <p>メールアドレス</p>
+        <textarea></textarea>
+        <input class="login-submit" type="submit" value="アカウント作成">
     </div>
     
   </body>
