”ルール説明画面”追加

--- a/test/header.html
+++ b/test/header.html
@@ -10,8 +10,8 @@
       <div class="header-logo">育成ゲーム</div>
       <div class="header-right">
         <a href="login.html">ログイン</a>
-        <a href="#">新規会員登録</a>
-        <a href="#">ルール説明</a> 
+        <a href="newMember.html">新規会員登録</a>
+        <a href="ruleExplanation.html">ルール説明</a> 
       </div>
     </div>
 
