--- a/test/progressbar.html
+++ b/test/progressbar.html
@@ -8,7 +8,7 @@
   <div>
     <progress id="myProgress" value="0" max="100">0%</progress>
   </div>
-  <input type="button" id="myButton" onclick="func1()" value="スタート">
+  <input type="button" id="myButton" onclick="func1()" value="パーセント">
 
   <script language="javascript" type="text/javascript">
   // プログレスバーの進捗値
