リンクページの体裁整えた

--- a/test/login.html
+++ b/test/login.html
@@ -16,6 +16,7 @@
         <input>
         <p>パスワード（必須）</p>
         <input>
+        <p>必須項目は必ず入力してください</p>
         <input class="login-submit" type="submit" value="ログイン">
     </div>
     
