--- a/test/newMember.html
+++ b/test/newMember.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>アカウント作成</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -16,8 +16,9 @@
         <input>
         <p>登録パスワード（必須）</p>
         <input>
-        <p>メールアドレス</p>
+        <p>メールアドレス（必須）</p>
         <textarea></textarea>
+        <p>必須項目は必ず入力してください</p>
         <input class="login-submit" type="submit" value="アカウント作成">
     </div>
     
