--- a/test/ruleExplanation.html
+++ b/test/ruleExplanation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>ルール説明</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
