--- a/test/progressbar.html
+++ b/test/progressbar.html
@@ -8,7 +8,7 @@
   <div>
     <progress id="myProgress" value="0" max="100">0%</progress>
   </div>
-  <input type="button" id="myButton" onclick="func1()" value="パーセント">
+  <input type="button" id="myButton" onclick="func1()" value="開始">
 
   <script language="javascript" type="text/javascript">
   // プログレスバーの進捗値
@@ -18,7 +18,7 @@
 
   // ボタンを押した時に動く関数
   function func1() {
-    val = 0;
+    val = 100;
     // ボタンを無効にする(何回も押せないように)
     document.getElementById("myButton").disabled = true;
     // 50msおきにプログレスバーを更新する
@@ -28,13 +28,13 @@
   // プログレスバーを更新する
   function updateProgress() {
     // プログレスバーの進捗値を更新し、プログレスバーに反映させる
-    val += 1;
+    val -= 1;
     document.getElementById("myProgress").value = val;
     document.getElementById("myProgress").innerText = val + "%";
     console.log("progress:", val, "%");
 
     // 最大値まで達したら終了
-    if (val == 100) {
+    if (val == val-20) {
       clearInterval(intervalID);
       document.getElementById("myButton").disabled = false;
     }
