ボタンを押すと決めた変数xだけバーが下がる

--- a/test/progressbar.html
+++ b/test/progressbar.html
@@ -8,19 +8,20 @@
   <div>
     <progress id="myProgress" value="0" max="100">0%</progress>
   </div>
-  <input type="button" id="myButton" onclick="func1()" value="開始">
+  <input type="button" id="myButton" onclick="func1()" value="スタート">
 
   <script language="javascript" type="text/javascript">
   // プログレスバーの進捗値
-  var val;
+  var val=100;
   // 一定間隔で処理を行うintervalのIDを保持
   var intervalID;
 
   // ボタンを押した時に動く関数
   function func1() {
-    val = 100;
+     //今回は変数を15としました
+     x=15;
     // ボタンを無効にする(何回も押せないように)
-    document.getElementById("myButton").disabled = true;
+    
     // 50msおきにプログレスバーを更新する
     intervalID = setInterval("updateProgress()", 50);
   }
@@ -29,14 +30,15 @@
   function updateProgress() {
     // プログレスバーの進捗値を更新し、プログレスバーに反映させる
     val -= 1;
+     x  -= 1;
     document.getElementById("myProgress").value = val;
     document.getElementById("myProgress").innerText = val + "%";
     console.log("progress:", val, "%");
 
-    // 最大値まで達したら終了
-    if (val == val-20) {
+    // xが０となったら繰り返しを終了
+    if (x==0) {
       clearInterval(intervalID);
-      document.getElementById("myButton").disabled = false;
+      
     }
   }
   </script>
