--- a/wiki/public/index.html
+++ b/wiki/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="default.css">
   </head>
   <body>
+    <div id="header"></div>
     <div id="root"></div>
     <script src="bundle.js"></script>
   </body>
